--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
 
     <!-- bootstrap javascript cdn -->
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- rezory pay integration script -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
